--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -486,224 +486,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-100\n"
-     ]
-    }
-   ],
-   "source": [
-    "var = -100.9\n",
-    "print(int(var))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T09:10:47.499739Z",
-     "start_time": "2023-11-23T09:10:47.496109Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      " [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]]\n",
-      "[[[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Crear una matriz de 8x8 con los números del 1 al 8 en cada fila\n",
-    "matriz_2d = np.tile(np.arange(1, 17), (16, 1))\n",
-    "print(matriz_2d)\n",
-    "# Crear una matriz de 3 dimensiones repitiendo la matriz 2D\n",
-    "matriz_3d = np.expand_dims(matriz_2d, axis=0)\n",
-    "print(matriz_3d)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T09:10:47.505935Z",
-     "start_time": "2023-11-23T09:10:47.499264Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Longitud forward: 16\n",
-      "Longitud forward: 8\n",
-      "Longitud forward: 4\n",
-      "[[ 5 13 -4 -4 -2 -2 -2 -2 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 5 13 -4 -4 -2 -2 -2 -2 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 5 13 -4 -4 -2 -2 -2 -2 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 5 13 -4 -4 -2 -2 -2 -2 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 3  7 11 15 -2 -2 -2 -2 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 3  7 11 15 -2 -2 -2 -2 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 3  7 11 15 -2 -2 -2 -2 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 3  7 11 15 -2 -2 -2 -2 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 2  4  6  8 10 12 14 16 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 2  4  6  8 10 12 14 16 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 2  4  6  8 10 12 14 16 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 2  4  6  8 10 12 14 16 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 2  4  6  8 10 12 14 16 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 2  4  6  8 10 12 14 16 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 2  4  6  8 10 12 14 16 -1 -1 -1 -1 -1 -1 -1 -1]\n",
-      " [ 2  4  6  8 10 12 14 16 -1 -1 -1 -1 -1 -1 -1 -1]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "### S-transform Forward image ###\n",
-    "transform_image = Wavelet(matriz_3d, 3)\n",
-    "#print(len(original_image[0][0]))\n",
-    "transform_forward = transform_image.handle_transform_forward()\n",
-    "print(transform_forward)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T09:10:47.506042Z",
-     "start_time": "2023-11-23T09:10:47.502331Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "### S-transform Reverse image ###\n",
-    "transform_image_reverse = Wavelet(transform_forward, 3)\n",
-    "transform_reverse = transform_image_reverse.handle_transform_inverse()\n",
-    "print(transform_reverse)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T09:10:47.512273Z",
-     "start_time": "2023-11-23T09:10:47.504257Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
-      "  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(matriz_3d)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T09:10:47.512490Z",
-     "start_time": "2023-11-23T09:10:47.509241Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T09:10:47.513684Z",
-     "start_time": "2023-11-23T09:10:47.511134Z"
-    }
+    "collapsed": false
    }
   }
  ],
