--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.431697Z",
-     "start_time": "2023-11-23T22:33:05.304439Z"
+     "end_time": "2023-11-24T10:26:19.609335Z",
+     "start_time": "2023-11-24T10:26:19.532694Z"
     }
    },
    "outputs": [],
@@ -23,8 +23,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.431852Z",
-     "start_time": "2023-11-23T22:33:05.401483Z"
+     "end_time": "2023-11-24T10:26:19.609560Z",
+     "start_time": "2023-11-24T10:26:19.601364Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.432014Z",
-     "start_time": "2023-11-23T22:33:05.426234Z"
+     "end_time": "2023-11-24T10:26:19.625761Z",
+     "start_time": "2023-11-24T10:26:19.605268Z"
     }
    },
    "outputs": [
@@ -69,10 +69,39 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[16 21 25 ... 25 22 19]\n",
+      "  [19 25 29 ... 29 25 22]\n",
+      "  [22 28 34 ... 34 29 25]\n",
+      "  ...\n",
+      "  [22 28 33 ... 34 30 26]\n",
+      "  [19 24 29 ... 30 25 23]\n",
+      "  [16 21 25 ... 25 22 19]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(original_image)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T10:26:19.633821Z",
+     "start_time": "2023-11-24T10:26:19.626509Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.439097Z",
-     "start_time": "2023-11-23T22:33:05.431486Z"
+     "end_time": "2023-11-24T10:26:19.670637Z",
+     "start_time": "2023-11-24T10:26:19.638302Z"
     }
    },
    "outputs": [],
@@ -86,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.558455Z",
-     "start_time": "2023-11-23T22:33:05.444693Z"
+     "end_time": "2023-11-24T10:26:19.723151Z",
+     "start_time": "2023-11-24T10:26:19.641503Z"
     }
    },
    "outputs": [
@@ -120,11 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.589149Z",
-     "start_time": "2023-11-23T22:33:05.554766Z"
+     "end_time": "2023-11-24T10:26:19.734724Z",
+     "start_time": "2023-11-24T10:26:19.719427Z"
     }
    },
    "outputs": [],
@@ -137,11 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.599533Z",
-     "start_time": "2023-11-23T22:33:05.592343Z"
+     "end_time": "2023-11-24T10:26:19.760023Z",
+     "start_time": "2023-11-24T10:26:19.753062Z"
     }
    },
    "outputs": [
@@ -163,11 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.632259Z",
-     "start_time": "2023-11-23T22:33:05.600269Z"
+     "end_time": "2023-11-24T10:26:19.813657Z",
+     "start_time": "2023-11-24T10:26:19.769184Z"
     }
    },
    "outputs": [
@@ -187,11 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.633285Z",
-     "start_time": "2023-11-23T22:33:05.624893Z"
+     "end_time": "2023-11-24T10:26:19.819111Z",
+     "start_time": "2023-11-24T10:26:19.805099Z"
     }
    },
    "outputs": [
@@ -211,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -232,14 +261,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.636752Z",
-     "start_time": "2023-11-23T22:33:05.633145Z"
+     "end_time": "2023-11-24T10:26:19.819454Z",
+     "start_time": "2023-11-24T10:26:19.814173Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -257,32 +286,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.640799Z",
-     "start_time": "2023-11-23T22:33:05.636944Z"
+     "end_time": "2023-11-24T10:26:19.824652Z",
+     "start_time": "2023-11-24T10:26:19.818621Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[148 157 164 ...   4   3   3]\n",
-      " [155 166 175 ...   4   4   4]\n",
-      " [162 175 186 ...   5   5   5]\n",
+      "[[ 44  51  97 ...   3   3   3]\n",
+      " [ 53 118 216 ...   4   5   4]\n",
+      " [ 76 190 176 ...   5   5   6]\n",
       " ...\n",
-      " [  3   4   5 ...   1  -1   1]\n",
-      " [  3   5   5 ...   1   1   1]\n",
-      " [  3   4   6 ...   0   0  -1]]\n"
+      " [  4   4   5 ...   1   1   0]\n",
+      " [  3   4   5 ...  -1   1   0]\n",
+      " [  3   4   5 ...   1   1  -1]]\n"
      ]
     }
    ],
    "source": [
     "### S-transform Forward image ###\n",
-    "transform_image = Wavelet(original_image, 1)\n",
+    "transform_image = Wavelet(original_image, 3)\n",
     "#print(len(original_image[0][0]))\n",
     "transform_forward = transform_image.handle_transform_forward()\n",
     "print(transform_forward)\n"
@@ -290,46 +319,61 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:08.320839Z",
-     "start_time": "2023-11-23T22:33:08.294041Z"
+     "end_time": "2023-11-24T10:27:42.516655Z",
+     "start_time": "2023-11-24T10:27:42.504538Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "### S-transform Reverse image ###\n",
+    "transform_image_reverse = Wavelet(transform_forward, 3)\n",
+    "transform_reverse = transform_image_reverse.handle_transform_inverse()\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T10:27:42.928341Z",
+     "start_time": "2023-11-24T10:27:42.896077Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[16 21 26 ... 25 22 19]\n",
+      "[[[16 21 25 ... 25 22 19]\n",
       "  [19 25 29 ... 29 25 22]\n",
-      "  [22 28 35 ... 35 29 25]\n",
+      "  [22 28 34 ... 34 29 25]\n",
       "  ...\n",
-      "  [22 28 32 ... 34 29 26]\n",
-      "  [19 24 29 ... 30 25 24]\n",
-      "  [16 21 25 ... 25 21 19]]]\n"
+      "  [22 28 33 ... 34 30 26]\n",
+      "  [19 24 29 ... 30 25 23]\n",
+      "  [16 21 25 ... 25 22 19]]]\n"
      ]
     }
    ],
    "source": [
-    "### S-transform Reverse image ###\n",
-    "transform_image_reverse = Wavelet(transform_forward, 1)\n",
-    "transform_reverse = transform_image_reverse.handle_transform_inverse()\n",
-    "print(transform_reverse)\n"
+    "print(transform_reverse)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:08.524106Z",
-     "start_time": "2023-11-23T22:33:08.452811Z"
+     "end_time": "2023-11-24T10:27:43.473922Z",
+     "start_time": "2023-11-24T10:27:43.470556Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -352,8 +396,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.750828Z",
-     "start_time": "2023-11-23T22:33:05.746238Z"
+     "end_time": "2023-11-24T10:27:43.950880Z",
+     "start_time": "2023-11-24T10:27:43.947409Z"
     }
    }
   },
@@ -379,14 +423,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[91  3 52 31]\n",
+      " [63 61 13 33]\n",
+      " [ 3 60 23  5]\n",
+      " [77 36 81 11]]\n",
+      "[[91  3 52]\n",
+      " [63 61 13]\n",
+      " [ 3 60 23]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz = np.random.randint(0, 100, size=(4, 4))\n",
+    "\n",
+    "matriz_2_x_2 = np.copy(matriz[:3, :3])\n",
+    "\n",
+    "print(matriz)\n",
+    "print(matriz_2_x_2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-24T10:26:19.881395Z",
+     "start_time": "2023-11-24T10:26:19.863027Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T22:33:05.754415Z",
-     "start_time": "2023-11-23T22:33:05.749366Z"
+     "end_time": "2023-11-24T10:26:19.881536Z",
+     "start_time": "2023-11-24T10:26:19.865436Z"
     }
    }
   }
