--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.609335Z",
-     "start_time": "2023-11-24T10:26:19.532694Z"
+     "end_time": "2023-11-24T10:56:28.559548Z",
+     "start_time": "2023-11-24T10:56:28.485226Z"
     }
    },
    "outputs": [],
@@ -23,8 +23,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.609560Z",
-     "start_time": "2023-11-24T10:26:19.601364Z"
+     "end_time": "2023-11-24T10:56:28.570216Z",
+     "start_time": "2023-11-24T10:56:28.567438Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.625761Z",
-     "start_time": "2023-11-24T10:26:19.605268Z"
+     "end_time": "2023-11-24T10:56:28.600424Z",
+     "start_time": "2023-11-24T10:56:28.592926Z"
     }
    },
    "outputs": [
@@ -90,8 +90,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.633821Z",
-     "start_time": "2023-11-24T10:26:19.626509Z"
+     "end_time": "2023-11-24T10:56:28.604471Z",
+     "start_time": "2023-11-24T10:56:28.599019Z"
     }
    }
   },
@@ -100,8 +100,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.670637Z",
-     "start_time": "2023-11-24T10:26:19.638302Z"
+     "end_time": "2023-11-24T10:56:28.610533Z",
+     "start_time": "2023-11-24T10:56:28.606995Z"
     }
    },
    "outputs": [],
@@ -118,8 +118,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.723151Z",
-     "start_time": "2023-11-24T10:26:19.641503Z"
+     "end_time": "2023-11-24T10:56:28.692153Z",
+     "start_time": "2023-11-24T10:56:28.659804Z"
     }
    },
    "outputs": [
@@ -152,8 +152,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.734724Z",
-     "start_time": "2023-11-24T10:26:19.719427Z"
+     "end_time": "2023-11-24T10:56:28.728401Z",
+     "start_time": "2023-11-24T10:56:28.700178Z"
     }
    },
    "outputs": [],
@@ -169,8 +169,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.760023Z",
-     "start_time": "2023-11-24T10:26:19.753062Z"
+     "end_time": "2023-11-24T10:56:28.729114Z",
+     "start_time": "2023-11-24T10:56:28.713417Z"
     }
    },
    "outputs": [
@@ -195,8 +195,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.813657Z",
-     "start_time": "2023-11-24T10:26:19.769184Z"
+     "end_time": "2023-11-24T10:56:28.743263Z",
+     "start_time": "2023-11-24T10:56:28.733735Z"
     }
    },
    "outputs": [
@@ -219,8 +219,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.819111Z",
-     "start_time": "2023-11-24T10:26:19.805099Z"
+     "end_time": "2023-11-24T10:56:28.768022Z",
+     "start_time": "2023-11-24T10:56:28.749354Z"
     }
    },
    "outputs": [
@@ -261,8 +261,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.819454Z",
-     "start_time": "2023-11-24T10:26:19.814173Z"
+     "end_time": "2023-11-24T10:56:28.772247Z",
+     "start_time": "2023-11-24T10:56:28.762829Z"
     }
    }
   },
@@ -286,14 +286,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.824652Z",
-     "start_time": "2023-11-24T10:26:19.818621Z"
+     "end_time": "2023-11-24T10:56:28.776601Z",
+     "start_time": "2023-11-24T10:56:28.771396Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -319,14 +319,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:27:42.516655Z",
-     "start_time": "2023-11-24T10:27:42.504538Z"
+     "end_time": "2023-11-24T10:56:28.823691Z",
+     "start_time": "2023-11-24T10:56:28.775542Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "### S-transform Reverse image ###\n",
@@ -337,14 +337,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:27:42.928341Z",
-     "start_time": "2023-11-24T10:27:42.896077Z"
+     "end_time": "2023-11-24T10:56:28.824104Z",
+     "start_time": "2023-11-24T10:56:28.801658Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -366,14 +366,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:27:43.473922Z",
-     "start_time": "2023-11-24T10:27:43.470556Z"
+     "end_time": "2023-11-24T10:56:28.824437Z",
+     "start_time": "2023-11-24T10:56:28.819520Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -396,8 +396,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:27:43.950880Z",
-     "start_time": "2023-11-24T10:27:43.947409Z"
+     "end_time": "2023-11-24T10:56:28.825050Z",
+     "start_time": "2023-11-24T10:56:28.823129Z"
     }
    }
   },
@@ -423,15 +423,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
-   "source": [],
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original entropy  6.7004541529645625\n",
+      "Pred entropy:  20.101362458893682\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = Prediction(original_image)\n",
+    "mat_pred = pred.predict_image_LOP()\n",
+    "statistics_data_pred = statistics(mat_pred)\n",
+    "entropy_pred = statistics_data.compute_entropy()\n",
+    "print(\"Original entropy \",entropy)\n",
+    "print(\"Pred entropy: \", entropy_pred)"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:26:19.881536Z",
-     "start_time": "2023-11-24T10:26:19.865436Z"
+     "end_time": "2023-11-24T10:56:30.406571Z",
+     "start_time": "2023-11-24T10:56:30.348754Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
