Check Wavelet Image 512 :C

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.559548Z",
-     "start_time": "2023-11-24T10:56:28.485226Z"
+     "end_time": "2023-11-24T11:04:56.068528Z",
+     "start_time": "2023-11-24T11:04:55.971073Z"
     }
    },
    "outputs": [],
@@ -23,19 +23,19 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.570216Z",
-     "start_time": "2023-11-24T10:56:28.567438Z"
+     "end_time": "2023-11-24T11:04:56.087472Z",
+     "start_time": "2023-11-24T11:04:56.082534Z"
     }
    },
    "outputs": [],
    "source": [
     "######LOAD RAW IMAGE######\n",
     "#dtype --> > stands for big endian, i stands for integer, 2 stands for 2 bytes\n",
-    "#originalFile=\"../images/03508649.1_512_512_2_0_12_0_0_0d.raw\" #int16\n",
-    "originalFile=\"../images/03508649.1_128_128_1_0_8_0_0_0.raw\"\n",
+    "originalFile=\"../images/03508649.1_512_512_2_0_12_0_0_0d.raw\" #int16\n",
+    "#originalFile=\"../images/03508649.1_128_128_1_0_8_0_0_0.raw\"\n",
     "#originalFile=\"../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0.raw\" #uint8\n",
-    "#ImageRaw = load_image_raw(originalFile, 1, 512, 512, \"int16\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\n",
-    "ImageRaw = load_image_raw(originalFile, 1, 128, 128, \"uint8\")\n",
+    "ImageRaw = load_image_raw(originalFile, 1, 512, 512, \"int16\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\n",
+    "#ImageRaw = load_image_raw(originalFile, 1, 128, 128, \"uint8\")\n",
     "#ImageRaw = load_image_raw(originalFile, 1, 2560, 2048, \"uint8\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\n",
     "original_image = ImageRaw.load_image_raw()\n",
     "##############################"
@@ -46,8 +46,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.600424Z",
-     "start_time": "2023-11-24T10:56:28.592926Z"
+     "end_time": "2023-11-24T11:04:56.277935Z",
+     "start_time": "2023-11-24T11:04:56.094034Z"
     }
    },
    "outputs": [
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "order zero entropy of the image:  6.7004541529645625\n"
+      "order zero entropy of the image:  10.431490855522489\n"
      ]
     }
    ],
@@ -74,13 +74,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[16 21 25 ... 25 22 19]\n",
-      "  [19 25 29 ... 29 25 22]\n",
-      "  [22 28 34 ... 34 29 25]\n",
+      "[[[ 25601  26369 -32255 ... -24831 -29183 -31487]\n",
+      "  [ 24321  27137  27393 ... -24319 -27391 -29183]\n",
+      "  [ 25345  27393 -30207 ... -23807 -29183 -25087]\n",
       "  ...\n",
-      "  [22 28 33 ... 34 30 26]\n",
-      "  [19 24 29 ... 30 25 23]\n",
-      "  [16 21 25 ... 25 22 19]]]\n"
+      "  [ 26881  30465 -25087 ... -19455 -24319 -25087]\n",
+      "  [ 19201  21761  30209 ... -17919  31745 -27135]\n",
+      "  [ 19457  22529  25089 ... -27135 -29183  28673]]]\n"
      ]
     }
    ],
@@ -90,8 +90,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.604471Z",
-     "start_time": "2023-11-24T10:56:28.599019Z"
+     "end_time": "2023-11-24T11:04:56.281370Z",
+     "start_time": "2023-11-24T11:04:56.278733Z"
     }
    }
   },
@@ -100,8 +100,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.610533Z",
-     "start_time": "2023-11-24T10:56:28.606995Z"
+     "end_time": "2023-11-24T11:04:56.286632Z",
+     "start_time": "2023-11-24T11:04:56.284862Z"
     }
    },
    "outputs": [],
@@ -118,8 +118,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.692153Z",
-     "start_time": "2023-11-24T10:56:28.659804Z"
+     "end_time": "2023-11-24T11:04:56.956288Z",
+     "start_time": "2023-11-24T11:04:56.286129Z"
     }
    },
    "outputs": [
@@ -127,14 +127,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Check Quantize: [[[1. 2. 2. ... 2. 2. 1.]\n",
-      "  [1. 2. 2. ... 2. 2. 2.]\n",
-      "  [2. 2. 3. ... 3. 2. 2.]\n",
+      "Check Quantize: [[[ 2560.  2636. -3225. ... -2483. -2918. -3148.]\n",
+      "  [ 2432.  2713.  2739. ... -2431. -2739. -2918.]\n",
+      "  [ 2534.  2739. -3020. ... -2380. -2918. -2508.]\n",
       "  ...\n",
-      "  [2. 2. 3. ... 3. 3. 2.]\n",
-      "  [1. 2. 2. ... 3. 2. 2.]\n",
-      "  [1. 2. 2. ... 2. 2. 1.]]]\n",
-      "Entropia: 3.4368520266679963\n"
+      "  [ 2688.  3046. -2508. ... -1945. -2431. -2508.]\n",
+      "  [ 1920.  2176.  3020. ... -1791.  3174. -2713.]\n",
+      "  [ 1945.  2252.  2508. ... -2713. -2918.  2867.]]]\n",
+      "Entropia: 8.427372356811585\n"
      ]
     }
    ],
@@ -152,8 +152,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.728401Z",
-     "start_time": "2023-11-24T10:56:28.700178Z"
+     "end_time": "2023-11-24T11:04:57.043759Z",
+     "start_time": "2023-11-24T11:04:56.955001Z"
     }
    },
    "outputs": [],
@@ -169,8 +169,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.729114Z",
-     "start_time": "2023-11-24T10:56:28.713417Z"
+     "end_time": "2023-11-24T11:04:57.167120Z",
+     "start_time": "2023-11-24T11:04:57.097898Z"
     }
    },
    "outputs": [
@@ -195,8 +195,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.743263Z",
-     "start_time": "2023-11-24T10:56:28.733735Z"
+     "end_time": "2023-11-24T11:04:57.297824Z",
+     "start_time": "2023-11-24T11:04:57.215819Z"
     }
    },
    "outputs": [
@@ -204,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mse: 28.00189208984375\n"
+      "Mse: 28.720321655273438\n"
      ]
     }
    ],
@@ -219,8 +219,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.768022Z",
-     "start_time": "2023-11-24T10:56:28.749354Z"
+     "end_time": "2023-11-24T11:04:57.491670Z",
+     "start_time": "2023-11-24T11:04:57.371950Z"
     }
    },
    "outputs": [
@@ -228,7 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Psnr: 33.69292552980915 dB\n"
+      "Psnr: 75.72710570410173 dB\n"
      ]
     }
    ],
@@ -261,8 +261,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.772247Z",
-     "start_time": "2023-11-24T10:56:28.762829Z"
+     "end_time": "2023-11-24T11:04:57.495527Z",
+     "start_time": "2023-11-24T11:04:57.491052Z"
     }
    }
   },
@@ -286,8 +286,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.776601Z",
-     "start_time": "2023-11-24T10:56:28.771396Z"
+     "end_time": "2023-11-24T11:04:57.496254Z",
+     "start_time": "2023-11-24T11:04:57.493681Z"
     }
    }
   },
@@ -299,19 +299,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 44  51  97 ...   3   3   3]\n",
-      " [ 53 118 216 ...   4   5   4]\n",
-      " [ 76 190 176 ...   5   5   6]\n",
+      "[[ 25857  28545    449 ...  13056   2432   -512]\n",
+      " [-16319 -10431 -19519 ...  -1536 -31488   2816]\n",
+      " [-23167 -20479 -10815 ...   5632  -2048  -3584]\n",
       " ...\n",
-      " [  4   4   5 ...   1   1   0]\n",
-      " [  3   4   5 ...  -1   1   0]\n",
-      " [  3   4   5 ...   1   1  -1]]\n"
+      " [  2944   6400   -256 ...   -256 -13568   7936]\n",
+      " [  4608   3840   2816 ...  17664  -4352  -2048]\n",
+      " [  2048    512  -3072 ...   3584   6400 -14336]]\n"
      ]
     }
    ],
    "source": [
     "### S-transform Forward image ###\n",
-    "transform_image = Wavelet(original_image, 3)\n",
+    "transform_image = Wavelet(original_image, 1)\n",
     "#print(len(original_image[0][0]))\n",
     "transform_forward = transform_image.handle_transform_forward()\n",
     "print(transform_forward)\n"
@@ -319,8 +319,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.823691Z",
-     "start_time": "2023-11-24T10:56:28.775542Z"
+     "end_time": "2023-11-24T11:04:57.662140Z",
+     "start_time": "2023-11-24T11:04:57.496956Z"
     }
    }
   },
@@ -330,15 +330,15 @@
    "outputs": [],
    "source": [
     "### S-transform Reverse image ###\n",
-    "transform_image_reverse = Wavelet(transform_forward, 3)\n",
+    "transform_image_reverse = Wavelet(transform_forward, 1)\n",
     "transform_reverse = transform_image_reverse.handle_transform_inverse()\n",
     "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.824104Z",
-     "start_time": "2023-11-24T10:56:28.801658Z"
+     "end_time": "2023-11-24T11:04:57.835885Z",
+     "start_time": "2023-11-24T11:04:57.663839Z"
     }
    }
   },
@@ -350,13 +350,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[16 21 25 ... 25 22 19]\n",
-      "  [19 25 29 ... 29 25 22]\n",
-      "  [22 28 34 ... 34 29 25]\n",
+      "[[[ 25601  26369 -32255 ... -24831 -29183 -31487]\n",
+      "  [ 24321  27137  -5375 ... -24319 -27391 -29183]\n",
+      "  [ 25345  27393 -30207 ... -23807 -29183 -25087]\n",
       "  ...\n",
-      "  [22 28 33 ... 34 30 26]\n",
-      "  [19 24 29 ... 30 25 23]\n",
-      "  [16 21 25 ... 25 22 19]]]\n"
+      "  [ 26881  30465   7681 ... -19455 -24319 -25087]\n",
+      "  [ 19201  21761  -2559 ... -17919  -1023   5633]\n",
+      "  [ 19457  22529  -7679 ... -27135   3585  -4095]]]\n"
      ]
     }
    ],
@@ -366,8 +366,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.824437Z",
-     "start_time": "2023-11-24T10:56:28.819520Z"
+     "end_time": "2023-11-24T11:04:57.839655Z",
+     "start_time": "2023-11-24T11:04:57.836712Z"
     }
    }
   },
@@ -379,13 +379,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[16 21 25 ... 25 22 19]\n",
-      "  [19 25 29 ... 29 25 22]\n",
-      "  [22 28 34 ... 34 29 25]\n",
+      "[[[ 25601  26369 -32255 ... -24831 -29183 -31487]\n",
+      "  [ 24321  27137  27393 ... -24319 -27391 -29183]\n",
+      "  [ 25345  27393 -30207 ... -23807 -29183 -25087]\n",
       "  ...\n",
-      "  [22 28 33 ... 34 30 26]\n",
-      "  [19 24 29 ... 30 25 23]\n",
-      "  [16 21 25 ... 25 22 19]]]\n"
+      "  [ 26881  30465 -25087 ... -19455 -24319 -25087]\n",
+      "  [ 19201  21761  30209 ... -17919  31745 -27135]\n",
+      "  [ 19457  22529  25089 ... -27135 -29183  28673]]]\n"
      ]
     }
    ],
@@ -396,8 +396,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:28.825050Z",
-     "start_time": "2023-11-24T10:56:28.823129Z"
+     "end_time": "2023-11-24T11:04:57.843107Z",
+     "start_time": "2023-11-24T11:04:57.839829Z"
     }
    }
   },
@@ -423,14 +423,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/codingTools/Prediction.py:23: RuntimeWarning: overflow encountered in scalar add\n",
+      "  prediction = self.image[i-1, j-1] + self.image[i-1, j] + self.image[i, j-1] - 2*self.image[i-1, j-1]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original entropy  6.7004541529645625\n",
-      "Pred entropy:  20.101362458893682\n"
+      "Original entropy  10.431490855522489\n",
+      "Pred entropy:  20.862981711045112\n"
      ]
     }
    ],
@@ -445,18 +453,9 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T10:56:30.406571Z",
-     "start_time": "2023-11-24T10:56:30.348754Z"
+     "end_time": "2023-11-24T11:04:58.392576Z",
+     "start_time": "2023-11-24T11:04:57.843408Z"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
    }
   }
  ],
