--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:56.068528Z",
-     "start_time": "2023-11-24T11:04:55.971073Z"
+     "end_time": "2023-11-29T11:39:45.936061Z",
+     "start_time": "2023-11-29T11:39:45.903462Z"
     }
    },
    "outputs": [],
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:56.087472Z",
-     "start_time": "2023-11-24T11:04:56.082534Z"
+     "end_time": "2023-11-29T11:39:45.954932Z",
+     "start_time": "2023-11-29T11:39:45.909676Z"
     }
    },
    "outputs": [],
@@ -34,7 +34,7 @@
     "originalFile=\"../images/03508649.1_512_512_2_0_12_0_0_0d.raw\" #int16\n",
     "#originalFile=\"../images/03508649.1_128_128_1_0_8_0_0_0.raw\"\n",
     "#originalFile=\"../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0.raw\" #uint8\n",
-    "ImageRaw = load_image_raw(originalFile, 1, 512, 512, \"int16\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\n",
+    "ImageRaw = load_image_raw(originalFile, 1, 512, 512, \">i2\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\n",
     "#ImageRaw = load_image_raw(originalFile, 1, 128, 128, \"uint8\")\n",
     "#ImageRaw = load_image_raw(originalFile, 1, 2560, 2048, \"uint8\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\n",
     "original_image = ImageRaw.load_image_raw()\n",
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:56.277935Z",
-     "start_time": "2023-11-24T11:04:56.094034Z"
+     "end_time": "2023-11-29T11:39:46.073947Z",
+     "start_time": "2023-11-29T11:39:45.932740Z"
     }
    },
    "outputs": [
@@ -68,19 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 25601  26369 -32255 ... -24831 -29183 -31487]\n",
-      "  [ 24321  27137  27393 ... -24319 -27391 -29183]\n",
-      "  [ 25345  27393 -30207 ... -23807 -29183 -25087]\n",
+      "[[[356 359 386 ... 415 398 389]\n",
+      "  [351 362 363 ... 417 405 398]\n",
+      "  [355 363 394 ... 419 398 414]\n",
       "  ...\n",
-      "  [ 26881  30465 -25087 ... -19455 -24319 -25087]\n",
-      "  [ 19201  21761  30209 ... -17919  31745 -27135]\n",
-      "  [ 19457  22529  25089 ... -27135 -29183  28673]]]\n"
+      "  [361 375 414 ... 436 417 414]\n",
+      "  [331 341 374 ... 442 380 406]\n",
+      "  [332 344 354 ... 406 398 368]]]\n"
      ]
     }
    ],
@@ -90,18 +90,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:56.281370Z",
-     "start_time": "2023-11-24T11:04:56.278733Z"
+     "end_time": "2023-11-29T11:39:46.074800Z",
+     "start_time": "2023-11-29T11:39:46.071589Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:56.286632Z",
-     "start_time": "2023-11-24T11:04:56.284862Z"
+     "end_time": "2023-11-29T11:39:46.079214Z",
+     "start_time": "2023-11-29T11:39:46.075168Z"
     }
    },
    "outputs": [],
@@ -115,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:56.956288Z",
-     "start_time": "2023-11-24T11:04:56.286129Z"
+     "end_time": "2023-11-29T11:39:46.763778Z",
+     "start_time": "2023-11-29T11:39:46.078433Z"
     }
    },
    "outputs": [
@@ -127,14 +127,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Check Quantize: [[[ 2560.  2636. -3225. ... -2483. -2918. -3148.]\n",
-      "  [ 2432.  2713.  2739. ... -2431. -2739. -2918.]\n",
-      "  [ 2534.  2739. -3020. ... -2380. -2918. -2508.]\n",
+      "Check Quantize: [[[35. 35. 38. ... 41. 39. 38.]\n",
+      "  [35. 36. 36. ... 41. 40. 39.]\n",
+      "  [35. 36. 39. ... 41. 39. 41.]\n",
       "  ...\n",
-      "  [ 2688.  3046. -2508. ... -1945. -2431. -2508.]\n",
-      "  [ 1920.  2176.  3020. ... -1791.  3174. -2713.]\n",
-      "  [ 1945.  2252.  2508. ... -2713. -2918.  2867.]]]\n",
-      "Entropia: 8.427372356811585\n"
+      "  [36. 37. 41. ... 43. 41. 41.]\n",
+      "  [33. 34. 37. ... 44. 38. 40.]\n",
+      "  [33. 34. 35. ... 40. 39. 36.]]]\n",
+      "Entropia: 7.1184477268956465\n"
      ]
     }
    ],
@@ -149,11 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:57.043759Z",
-     "start_time": "2023-11-24T11:04:56.955001Z"
+     "end_time": "2023-11-29T11:39:46.855010Z",
+     "start_time": "2023-11-29T11:39:46.763942Z"
     }
    },
    "outputs": [],
@@ -166,11 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:57.167120Z",
-     "start_time": "2023-11-24T11:04:57.097898Z"
+     "end_time": "2023-11-29T11:39:46.979750Z",
+     "start_time": "2023-11-29T11:39:46.917419Z"
     }
    },
    "outputs": [
@@ -192,11 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:57.297824Z",
-     "start_time": "2023-11-24T11:04:57.215819Z"
+     "end_time": "2023-11-29T11:39:47.116201Z",
+     "start_time": "2023-11-29T11:39:46.991927Z"
     }
    },
    "outputs": [
@@ -204,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mse: 28.720321655273438\n"
+      "Mse: 28.504417419433594\n"
      ]
     }
    ],
@@ -216,11 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:57.491670Z",
-     "start_time": "2023-11-24T11:04:57.371950Z"
+     "end_time": "2023-11-29T11:39:47.317301Z",
+     "start_time": "2023-11-29T11:39:47.171544Z"
     }
    },
    "outputs": [
@@ -228,7 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Psnr: 75.72710570410173 dB\n"
+      "Psnr: 57.6980772672628 dB\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "outputs": [
     {
      "name": "stdout",
@@ -261,14 +261,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:57.495527Z",
-     "start_time": "2023-11-24T11:04:57.491052Z"
+     "end_time": "2023-11-29T11:39:47.318478Z",
+     "start_time": "2023-11-29T11:39:47.315620Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "outputs": [
     {
      "name": "stdout",
@@ -286,26 +286,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:57.496254Z",
-     "start_time": "2023-11-24T11:04:57.493681Z"
+     "end_time": "2023-11-29T11:39:47.322721Z",
+     "start_time": "2023-11-29T11:39:47.318810Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 25857  28545    449 ...  13056   2432   -512]\n",
-      " [-16319 -10431 -19519 ...  -1536 -31488   2816]\n",
-      " [-23167 -20479 -10815 ...   5632  -2048  -3584]\n",
+      "[[356 367 385 ...  51   9  -2]\n",
+      " [384 407 435 ...  -6   5  11]\n",
+      " [421 432 469 ...  22  -8 -14]\n",
       " ...\n",
-      " [  2944   6400   -256 ...   -256 -13568   7936]\n",
-      " [  4608   3840   2816 ...  17664  -4352  -2048]\n",
-      " [  2048    512  -3072 ...   3584   6400 -14336]]\n"
+      " [ 11  25  -1 ...  -1 -53  31]\n",
+      " [ 18  15  11 ...  69 -17  -8]\n",
+      " [  8   2 -12 ...  14  25 -56]]\n"
      ]
     }
    ],
@@ -319,44 +319,43 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:57.662140Z",
-     "start_time": "2023-11-24T11:04:57.496956Z"
+     "end_time": "2023-11-29T11:39:47.482120Z",
+     "start_time": "2023-11-29T11:39:47.322996Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "outputs": [],
    "source": [
     "### S-transform Reverse image ###\n",
     "transform_image_reverse = Wavelet(transform_forward, 1)\n",
-    "transform_reverse = transform_image_reverse.handle_transform_inverse()\n",
-    "\n"
+    "transform_reverse = transform_image_reverse.handle_transform_inverse()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:57.835885Z",
-     "start_time": "2023-11-24T11:04:57.663839Z"
+     "end_time": "2023-11-29T11:39:47.641972Z",
+     "start_time": "2023-11-29T11:39:47.640424Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 25601  26369 -32255 ... -24831 -29183 -31487]\n",
-      "  [ 24321  27137  -5375 ... -24319 -27391 -29183]\n",
-      "  [ 25345  27393 -30207 ... -23807 -29183 -25087]\n",
+      "[[[356 359 386 ... 415 398 389]\n",
+      "  [351 362 363 ... 417 405 398]\n",
+      "  [355 363 394 ... 419 398 414]\n",
       "  ...\n",
-      "  [ 26881  30465   7681 ... -19455 -24319 -25087]\n",
-      "  [ 19201  21761  -2559 ... -17919  -1023   5633]\n",
-      "  [ 19457  22529  -7679 ... -27135   3585  -4095]]]\n"
+      "  [361 375 414 ... 436 417 414]\n",
+      "  [331 341 374 ... 442 380 406]\n",
+      "  [332 344 354 ... 406 398 368]]]\n"
      ]
     }
    ],
@@ -366,26 +365,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:57.839655Z",
-     "start_time": "2023-11-24T11:04:57.836712Z"
+     "end_time": "2023-11-29T11:39:47.646667Z",
+     "start_time": "2023-11-29T11:39:47.642422Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 25601  26369 -32255 ... -24831 -29183 -31487]\n",
-      "  [ 24321  27137  27393 ... -24319 -27391 -29183]\n",
-      "  [ 25345  27393 -30207 ... -23807 -29183 -25087]\n",
+      "[[[356 359 386 ... 415 398 389]\n",
+      "  [351 362 363 ... 417 405 398]\n",
+      "  [355 363 394 ... 419 398 414]\n",
       "  ...\n",
-      "  [ 26881  30465 -25087 ... -19455 -24319 -25087]\n",
-      "  [ 19201  21761  30209 ... -17919  31745 -27135]\n",
-      "  [ 19457  22529  25089 ... -27135 -29183  28673]]]\n"
+      "  [361 375 414 ... 436 417 414]\n",
+      "  [331 341 374 ... 442 380 406]\n",
+      "  [332 344 354 ... 406 398 368]]]\n"
      ]
     }
    ],
@@ -396,8 +395,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:57.843107Z",
-     "start_time": "2023-11-24T11:04:57.839829Z"
+     "end_time": "2023-11-29T11:39:47.650577Z",
+     "start_time": "2023-11-29T11:39:47.645177Z"
     }
    }
   },
@@ -423,16 +422,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/codingTools/Prediction.py:23: RuntimeWarning: overflow encountered in scalar add\n",
-      "  prediction = self.image[i-1, j-1] + self.image[i-1, j] + self.image[i, j-1] - 2*self.image[i-1, j-1]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -453,8 +444,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-24T11:04:58.392576Z",
-     "start_time": "2023-11-24T11:04:57.843408Z"
+     "end_time": "2023-11-29T11:39:48.133856Z",
+     "start_time": "2023-11-29T11:39:47.686158Z"
     }
    }
   }
